--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,9 @@
 spring.datasource.url=jdbc:mysql://localhost:3306/bd_crud
-spring.datasource.username==root
-spring.datasource.password=
+spring.datasource.username=emanuel
+spring.datasource.password=emanuel
 
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=none
 
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
